--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@mui/material": "^5.10.1",
     "@mui/styled-engine": "^5.10.1",
     "@mui/styles": "^5.9.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.29.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-form-validator": "^3.0.1",
